fix: research work collapse not working, paper btn disable color

--- a/src/AllResearchWorkSections/ResearchWork.module.css
+++ b/src/AllResearchWorkSections/ResearchWork.module.css
@@ -18,8 +18,6 @@
     flex-direction: column;
     justify-content: stretch;
     align-items: stretch;
-
-    min-height: 100vh;
 }
 
 .researchWorkHead {
@@ -48,7 +46,7 @@
 }
 
 .researchWorkMainPart {
-    flex:1;
+    flex: 1;
     display: flex;
     flex-direction: row;
     align-items: stretch;
@@ -90,9 +88,13 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
-    
+
     width: 100%;
-    margin-top: 1%;
+    margin-top: 4%;
+}
+
+.paperBtn {
+    color: grey !important;
 }
 
 .researchWorkBtnLink {
